# darling-pcre

./: CMakeLists.txt  README.md
pcre/: Makefile  config.h  config.status  libpcre.pc  libpcre16.pc  libpcre32.pc  libtool  pcre-config
